ci: use single step publish

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "pub-version-pre": "lerna version --conventional-commits --conventional-prerelease",
     "pub-version-grad": "lerna version --conventional-commits --conventional-graduate",
     "pub": "npm install && npm test && lerna publish --conventional-commits",
-    "pub-next": "npm install && npm test && lerna publish from-git --dist-tag next",
+    "pub-next": "npm install && npm test && lerna publish --conventional-commits --conventional-prerelease --dist-tag next",
     "symlink": "node build_tools/bin/symlink.js packages test-packages",
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test && npm run test-schema",
