dev: export `ajv.config`

--- a/packages/cspell-types/package.json
+++ b/packages/cspell-types/package.json
@@ -9,7 +9,9 @@
   "typings": "dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js",
-    "./cspell.schema.json": "./cspell.schema.json"
+    "./cspell.schema.json": "./cspell.schema.json",
+    "./ajv.config": "./ajv.config.js",
+    "./ajv.config.js": "./ajv.config.js"
   },
   "scripts": {
     "clean": "rimraf dist coverage",
