--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -2,6 +2,7 @@
   "name": "cspell",
   "version": "5.3.0-alpha.3",
   "description": "A Spelling Checker for Code!",
+  "funding": "https://github.com/streetsidesoftware/cspell?sponsor=1",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "bin": {
