--- a/packages/cspell-lib/cspell.config.json
+++ b/packages/cspell-lib/cspell.config.json
@@ -1,16 +1,16 @@
 {
+    "$schema": "https://raw.githubusercontent.com/streetsidesoftware/cspell/master/cspell.schema.json",
     "version": "0.2",
     "id": "cspell-package-config",
     "name": "cspell Package Config",
     "language": "en",
-    "words": ["gensequence"],
+    "words": [
+        "gensequence"
+    ],
     "maxNumberOfProblems": 100,
     "ignorePaths": [
-        "dictionaries/**",
-        "migrated_dictionaries/**",
         "node_modules/**",
         "coverage/**",
-        ".git/**",
         "dist/**",
         "package.json",
         "**/package.json",
@@ -20,5 +20,7 @@
     "allowCompoundWords": false,
     "dictionaryDefinitions": [],
     "ignoreWords": [],
-    "import": ["../../cspell.json"]
+    "import": [
+        "../../cspell.json"
+    ]
 }
