fix: be able to report on glob source. (#1001)
* fix: be able to report on glob source.

- Add an optional source field to the glob definition.
- Handle circular imports.

* Update cspell.config.json

--- a/packages/cspell-lib/cspell.config.json
+++ b/packages/cspell-lib/cspell.config.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "https://raw.githubusercontent.com/streetsidesoftware/cspell/master/cspell.schema.json",
     "version": "0.2",
     "id": "cspell-package-config",
     "name": "cspell Package Config",
@@ -6,11 +7,8 @@
     "words": ["gensequence"],
     "maxNumberOfProblems": 100,
     "ignorePaths": [
-        "dictionaries/**",
-        "migrated_dictionaries/**",
         "node_modules/**",
         "coverage/**",
-        ".git/**",
         "dist/**",
         "package.json",
         "**/package.json",
