--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cspell/cspell-bundled-dicts",
-  "version": "5.3.0-alpha.0",
+  "version": "5.3.0",
   "description": "Dictionaries bundled with cspell",
   "publishConfig": {
     "access": "public"
