--- a/packages/cspell-trie2-lib/package.json
+++ b/packages/cspell-trie2-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-trie2-lib",
-  "version": "5.3.0-alpha.4",
+  "version": "5.3.0",
   "description": "Trie Data Structure to support cspell.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
