--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -31,9 +31,10 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
+    "@cspell/dict-ada": "^1.1.1",
     "@cspell/dict-aws": "^1.0.13",
     "@cspell/dict-bash": "^1.0.11",
-    "@cspell/dict-companies": "^1.0.35",
+    "@cspell/dict-companies": "^1.0.36",
     "@cspell/dict-cpp": "^1.1.37",
     "@cspell/dict-cryptocurrencies": "^1.0.10",
     "@cspell/dict-csharp": "^1.0.10",
