ci: Add integration test for Ada repo

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -35,6 +35,7 @@ jobs:
           - wireapp/wire-desktop wireapp/wire-webapp
           - django/django
           - TheAlgorithms/Python
+          - AdaDoom3/AdaDoom3
 
     steps:
       - uses: actions/checkout@v2
