--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -4,12 +4,15 @@
   "description": "A library of useful functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "files:comment": "Due to a lerna bug, patterns like `!**/*.map` are not getting recursively honored",
   "files": [
     "dist/**",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*",
+    "!dist/**/*.map",
     "!**/*.test.*",
     "!**/*.spec.*",
-    "!**/*.map",
-    "config/**"
+    "!**/*.map"
   ],
   "scripts": {
     "clean": "rimraf dist temp coverage",
