--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -23,9 +23,13 @@
       ]
     }
   },
+  "files:comment": "Due to a lerna bug, patterns like `!**/*.map` are not getting recursively honored",
   "files": [
     "bin.js",
     "dist/**",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*",
+    "!dist/**/*.map",
     "!**/*.test.*",
     "!**/*.spec.*",
     "!**/*.map"
