--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell",
-  "version": "5.3.6",
+  "version": "5.3.7-alpha.0",
   "description": "A Spelling Checker for Code!",
   "funding": "https://github.com/streetsidesoftware/cspell?sponsor=1",
   "main": "dist/index.js",
@@ -73,7 +73,7 @@
     "commander": "^7.1.0",
     "comment-json": "^4.1.0",
     "cspell-glob": "^5.3.5",
-    "cspell-lib": "^5.3.6",
+    "cspell-lib": "^5.3.7-alpha.0",
     "fs-extra": "^9.1.0",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.6",
