--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-lib",
-  "version": "5.3.6",
+  "version": "5.3.7-alpha.0",
   "description": "A library of useful functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
