--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -26,7 +26,7 @@
   "files:comment": "Due to a lerna bug, patterns like `!**/*.map` are not getting recursively honored",
   "files": [
     "bin.js",
-    "dist/**",
+    "dist",
     "!dist/**/*.test.*",
     "!dist/**/*.spec.*",
     "!dist/**/*.map",
