--- a/packages/cspell/.npmignore
+++ b/packages/cspell/.npmignore
@@ -1,24 +1,6 @@
-# Ignore Dev Env things
-.vscode
-.nyc_output
-
-# no need to ship the source dictionaries
-/dictionaries
-/migrated_dictionaries
-
-# Source is allowed to make sure the .map files work.
-# /src
-
-# Ignore Unit test stuff
-/samples
-/temp
-/coverage
-/images
-/tmp
+# Ignore any files that should NOT be published
+# This is to address a bug with lerna and npm-packlist
+__mocks__
 **/*.test.*
 **/*.spec.*
-
-# Ignore non distribution files
-tsconfig.json
-jest.config.js
-*.log
+**/*.map
