--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -36,7 +36,7 @@
   ],
   "scripts": {
     "clean": "rimraf dist coverage",
-    "build": "npm run compile",
+    "build": "npm run compile && cp .npmignore dist",
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "watch": "tsc --watch -p .",
