ci: Make sure only the files we want are published.

--- a/.gitignore
+++ b/.gitignore
@@ -35,17 +35,15 @@ bower_components
 build/Release
 
 # Ignore compiled files.
-**/dist/**
-# Keep the .npmignore if it is present
-!**/dist/.npmignore
-
+dist
 out
+
+# And temp files
 temp
 tmp
 
 # Dependency directories
 node_modules/
-jspm_packages/
 
 # TypeScript v1 declaration files
 typings/
