--- a/packages/cspell-glob/package.json
+++ b/packages/cspell-glob/package.json
@@ -15,7 +15,8 @@
   },
   "typings": "dist/index.d.ts",
   "files": [
-    "dist/**",
+    "dist",
+    "!**/__mocks__",
     "!**/*.test.*",
     "!**/*.spec.*",
     "!**/*.map"
