--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -31,9 +31,11 @@
   ],
   "files": [
     "bin.js",
-    "dist/**",
-    "!**/*.map",
-    "!**/*.test.*"
+    "dist",
+    "!**/__mocks__",
+    "!**/*.test.*",
+    "!**/*.spec.*",
+    "!**/*.map"
   ],
   "author": "Jason Dent",
   "license": "MIT",
