--- a/packages/cspell-types/package.json
+++ b/packages/cspell-types/package.json
@@ -27,9 +27,10 @@
     "url": "git+https://github.com/streetsidesoftware/cspell.git"
   },
   "files": [
-    "dist/**",
+    "dist",
     "ajv.config.js",
     "cspell.schema.json",
+    "!**/__mocks__",
     "!**/*.test.*",
     "!**/*.spec.*",
     "!**/*.map"
