--- a/packages/cspell-io/package.json
+++ b/packages/cspell-io/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-io",
-  "version": "5.3.5",
+  "version": "5.3.7-alpha.3",
   "description": "A library of useful I/O functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
