--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-lib",
-  "version": "5.3.7-alpha.2",
+  "version": "5.3.7-alpha.3",
   "description": "A library of useful functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -47,13 +47,13 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "@cspell/cspell-bundled-dicts": "^5.3.4",
-    "@cspell/cspell-types": "^5.3.5",
+    "@cspell/cspell-types": "^5.3.7-alpha.3",
     "comment-json": "^4.1.0",
     "configstore": "^5.0.1",
     "cosmiconfig": "^7.0.0",
-    "cspell-glob": "^5.3.5",
-    "cspell-io": "^5.3.5",
-    "cspell-trie-lib": "^5.3.5",
+    "cspell-glob": "^5.3.7-alpha.3",
+    "cspell-io": "^5.3.7-alpha.3",
+    "cspell-trie-lib": "^5.3.7-alpha.3",
     "fs-extra": "^9.1.0",
     "gensequence": "^3.1.1",
     "resolve-from": "^5.0.0",
