--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cspell/cspell-tools",
-  "version": "5.3.7-alpha.3",
+  "version": "5.3.7",
   "description": "Tools to assist with the development of cSpell",
   "typings": "dist/index.d.ts",
   "publishConfig": {
@@ -45,8 +45,8 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^7.1.0",
-    "cspell-io": "^5.3.7-alpha.3",
-    "cspell-trie-lib": "^5.3.7-alpha.3",
+    "cspell-io": "^5.3.7",
+    "cspell-trie-lib": "^5.3.7",
     "fs-extra": "^9.1.0",
     "gensequence": "^3.1.1",
     "glob": "^7.1.6",
