--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-trie",
-  "version": "5.3.7-alpha.3",
+  "version": "5.3.7",
   "description": "Trie Data Structure reader for cspell",
   "bin": {
     "cspell-trie": "bin.js"
@@ -40,7 +40,7 @@
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
     "commander": "^7.1.0",
-    "cspell-trie-lib": "^5.3.7-alpha.3",
+    "cspell-trie-lib": "^5.3.7",
     "fs-extra": "^9.1.0",
     "gensequence": "^3.1.1",
     "iterable-to-stream": "^1.0.1"
