--- a/package.json
+++ b/package.json
@@ -71,5 +71,8 @@
     "shelljs": "^0.8.4",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
+  },
+  "dependencies": {
+    "10": "0.0.1"
   }
 }
