ci: Update packages (#33)

--- a/packages/hunspell-reader/package.json
+++ b/packages/hunspell-reader/package.json
@@ -38,14 +38,15 @@
   },
   "homepage": "https://github.com/Jason-Rev/hunspell-reader#readme",
   "devDependencies": {
-    "@types/fs-extra": "^9.0.7",
-    "@types/node": "^12.20.1",
+    "@types/fs-extra": "^9.0.8",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.32",
     "cspell": "^5.2.4",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5"
+    "ts-jest": "^26.5.3",
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "commander": "^7.1.0",
