ci: Add integration test for LaTeX

--- a/integration-tests/repositories/cspell.yaml
+++ b/integration-tests/repositories/cspell.yaml
@@ -7,6 +7,9 @@ words:
 ignorePaths:
   - "*.ktx"
 
+import:
+  - "./cspell-latex.json"
+
 overrides:
   - filename: "temp/TheAlgorithms/Python/**/*.py"
     languageSettings:
