--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -36,6 +36,7 @@ jobs:
           - django/django
           - TheAlgorithms/Python
           - AdaDoom3/AdaDoom3
+          - MartinThoma/LaTeX-examples
 
     steps:
       - uses: actions/checkout@v2
@@ -50,3 +51,5 @@ jobs:
           cd integration-tests
           && npm ci
           && npm run integration-tests -- ${{ matrix.repo }}
+
+# cspell:ignore MartinThoma
