fix: Add Sample for turning off dictionaries

--- a/packages/Samples/package.json
+++ b/packages/Samples/package.json
@@ -3,11 +3,10 @@
   "version": "5.0.1",
   "description": "Sample files used during unit tests",
   "private": true,
-  "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified\""
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
