ci: speed up integration test for AdaDoom
Do not check machine generated files.

--- a/integration-tests/repositories/cspell.yaml
+++ b/integration-tests/repositories/cspell.yaml
@@ -6,6 +6,8 @@ words:
 
 ignorePaths:
   - "*.ktx"
+  - "*.idmap" # DOOM, cspell:ignore idmap
+  - "*.ogex" # DOOM, cspell:ignore ogex
 
 import:
   - "./cspell-latex.json"
