--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "symlink": "node build_tools/bin/symlink.js packages test-packages",
     "test-watch": "lerna run --parallel test-watch",
     "test": "lerna run test && npm run test-schema",
+    "test-bin": "npm run test-bin-spell && npm run test-bin-trace && npm run test-bin-check",
+    "test-bin-check": "node ./bin.js check *.md",
+    "test-bin-spell": "node ./bin.js -c cspellrc.json",
+    "test-bin-trace": "node ./bin.js trace test",
     "test-integrations": "cd ./integration-tests && npm run integration-tests",
     "test-schema": "ajv -s ./cspell.schema.json -d cspell.json -c ./packages/cspell-types/ajv.config.js",
     "update-packages": "lerna exec \"npm update -S && rimraf node_modules package-lock.json && npm i\" && lerna bootstrap --no-ci",
