--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
     inputs:
       branch:
-        description: 'Branch to run on "master" or "cspell4"'
-        default: master
+        description: 'Branch to run on "main" or "cspell4"'
+        default: main
         required: true
 
 jobs:
@@ -24,8 +24,8 @@ jobs:
         run: |
           git config --local user.name 'Jason Dent'
           git config --local user.email 'jason@streetsidesoftware.nl'
-      - name: Version Master
-        if: ${{ github.event.inputs.branch == 'master' }}
+      - name: Version Main
+        if: ${{ github.event.inputs.branch == 'main' }}
         run: npm run pub-version-pre -- -y
       - name: Version cspell4
         if: ${{ github.event.inputs.branch == 'cspell4' }}
