feat: support `.pnp.js` when loading configurations.

--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -48,14 +48,17 @@
   "dependencies": {
     "@cspell/cspell-bundled-dicts": "^5.5.2",
     "@cspell/cspell-types": "^5.5.2",
+    "clear-module": "^4.1.1",
     "comment-json": "^4.1.0",
     "configstore": "^5.0.1",
     "cosmiconfig": "^7.0.0",
     "cspell-glob": "^5.5.2",
     "cspell-io": "^5.5.2",
     "cspell-trie-lib": "^5.5.2",
+    "find-up": "^5.0.0",
     "fs-extra": "^10.0.0",
     "gensequence": "^3.1.1",
+    "import-fresh": "^3.3.0",
     "resolve-from": "^5.0.0",
     "resolve-global": "^1.0.0",
     "vscode-uri": "^3.0.2"
