--- a/.github/workflows/cspell-cli.yml
+++ b/.github/workflows/cspell-cli.yml
@@ -10,4 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.4
+      - run: npm run prepare-cspell-action
       - run: npx cspell@latest "**/*"
