--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,4 +12,5 @@ jobs:
       - uses: actions/checkout@v2.3.4
       - uses: actions/setup-node@v2.1.5
       - run: npm ci
+      - run: npm run build
       - run: npm run lint-ci
