dev: make sure it is possible to build a cli repo

--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -11,6 +11,8 @@
   "exports": {
     ".": "./dist/index.js",
     "./app": "./dist/app.js",
+    "./bin": "./bin.js",
+    "./bin.js": "./bin.js",
     "./application": "./dist/application.js",
     "./dist/app": "./dist/app.js",
     "./dist/application": "./dist/application.js"
