test: add integration test for graphql-spec

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -24,7 +24,7 @@ jobs:
           - Azure/azure-rest-api-specs
           - alexiosc/megistos
           - exonum/exonum
-          - bitjson/typescript-starter graphql/express-graphql graphql/graphql-relay-js
+          - bitjson/typescript-starter graphql/express-graphql graphql/graphql-relay-js graphql/graphql-spec
           - graphql/graphql-js
           - liriliri/licia
           - microsoft/TypeScript-Website
