fix: make sure cspell-tools does not collide with old version.

--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "bin": {
-    "cspell-tools": "bin.js"
+    "cspell-tools-cli": "bin.js"
   },
   "scripts": {
     "build": "tsc -p .",
