--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -77,7 +77,8 @@
     "fs-extra": "^10.0.0",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.7",
-    "strip-ansi": "^6.0.0"
+    "strip-ansi": "^6.0.0",
+    "vscode-uri": "^3.0.2"
   },
   "engines": {
     "node": ">=12.0.0"
