--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -70,6 +70,7 @@
     "@cspell/dict-cpp": "^1.1.39",
     "@cspell/dict-csharp": "^1.0.11",
     "@cspell/dict-css": "^1.0.11",
+    "@cspell/dict-fa-ir": "^1.0.17",
     "@cspell/dict-fr-fr": "^1.2.21",
     "@cspell/dict-html": "^1.1.7",
     "@cspell/dict-nl-nl": "^1.0.35",
