fix: publishing issue with cspell-bundled-dicts

--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -7,7 +7,8 @@
   },
   "main": "cspell-default.json",
   "files": [
-    "cspell-default.json"
+    "cspell-default.json",
+    "compatibility-words.txt"
   ],
   "exports": {
     ".": "./cspell-default.json",
