--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,6 +27,8 @@ updates:
         versions: [">=6"]
       - dependency-name: "get-stdin"
         versions: [">=9"]
+      - dependency-name: "commander"
+        versions: [">=8"]
 
   - package-ecosystem: "github-actions"
     # Workflow files stored in the
