--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,6 +22,13 @@ updates:
     target-branch: "cspell4"
     schedule:
       interval: "weekly"
+    ignore:
+      - dependency-name: "configstore"
+        versions: [">=6"]
+      - dependency-name: "get-stdin"
+        versions: [">=9"]
+      - dependency-name: "commander"
+        versions: [">=8"]
 
   - package-ecosystem: "github-actions"
     # Workflow files stored in the
