--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -8,13 +8,15 @@
   "main": "cspell-default.json",
   "files": [
     "cspell-default.json",
-    "compatibility-words.txt"
+    "compatibility-words.txt.gz"
   ],
   "exports": {
     ".": "./cspell-default.json",
     "./cspell-default.json": "./cspell-default.json"
   },
-  "scripts": {},
+  "scripts": {
+    "prepare": "cspell-tools-cli compile compatibility-words.txt"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/streetsidesoftware/cspell.git"
@@ -69,5 +71,8 @@
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "devDependencies": {
+    "@cspell/cspell-tools": "^5.6.5"
   }
 }
