dev: use build step instead of prepare

--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -15,7 +15,7 @@
     "./cspell-default.json": "./cspell-default.json"
   },
   "scripts": {
-    "prepare": "cspell-tools-cli compile compatibility-words.txt"
+    "build": "cspell-tools-cli compile compatibility-words.txt"
   },
   "repository": {
     "type": "git",
