--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build-dict": "cspell-tools-cli compile compatibility-words.txt",
-    "test": "../../bin.js \"*.txt\""
+    "test": "node ../../bin.js \"*.txt\""
   },
   "repository": {
     "type": "git",
