--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/setup-node@v2.3.0
 
       - run: npm ci
-
       - run: npm run coverage
 
       - name: Upload coverage Coveralls
@@ -25,7 +24,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: ./lcov.info
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2.0.2
-        with:
-          directory: ./packages/*/coverage/
+      # Do not upload to Codecov it only supports 1 comparison branch
+      # - name: Upload coverage to Codecov
+      #   uses: codecov/codecov-action@v2.0.2
+      #   with:
+      #     directory: "."
+      #     files: ./lcov.info
