--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bootstrap": "lerna bootstrap --no-ci",
     "lint": "eslint . --fix && prettier -w \"**/*.{md,yaml,yml,json}\"",
     "lint-ci": "eslint . && prettier -c \"**/*.{md,yaml,yml,json}\"",
-    "prepare-cspell-action": "cd test-packages/yarn2 && npm i",
+    "prepare-cspell-action": "npm i",
     "pub-lerna": "lerna publish from-git",
     "pub-version": "lerna version --conventional-commits",
     "pub-version-pre": "lerna version --conventional-commits --conventional-prerelease",
