--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -77,10 +77,12 @@
     "@cspell/dict-python": "^1.0.37",
     "@types/configstore": "^5.0.1",
     "@types/fs-extra": "^9.0.12",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.6.0",
     "cspell-dict-nl-nl": "^1.1.2",
     "jest": "^27.0.6",
     "lorem-ipsum": "^2.0.3",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.4"
   }
 }
