--- a/packages/cspell-trie/package.json
+++ b/packages/cspell-trie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-trie",
-  "version": "5.6.7",
+  "version": "5.7.0-alpha.0",
   "description": "Trie Data Structure reader for cspell",
   "bin": {
     "cspell-trie": "bin.js"
