--- a/packages/cspell-lib/package.json
+++ b/packages/cspell-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell-lib",
-  "version": "5.6.7",
+  "version": "5.7.0-alpha.0",
   "description": "A library of useful functions used across various cspell tools.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -46,7 +46,7 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
-    "@cspell/cspell-bundled-dicts": "^5.6.7",
+    "@cspell/cspell-bundled-dicts": "^5.7.0-alpha.0",
     "@cspell/cspell-types": "^5.6.7",
     "clear-module": "^4.1.1",
     "comment-json": "^4.1.1",
