--- a/packages/cspell-tools/package.json
+++ b/packages/cspell-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cspell/cspell-tools",
-  "version": "5.6.7",
+  "version": "5.7.0-alpha.0",
   "description": "Tools to assist with the development of cSpell",
   "typings": "dist/index.d.ts",
   "publishConfig": {
