--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cspell/cspell-bundled-dicts",
-  "version": "5.7.0-alpha.0",
+  "version": "5.7.0",
   "description": "Dictionaries bundled with cspell",
   "publishConfig": {
     "access": "public"
@@ -74,6 +74,6 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
-    "@cspell/cspell-tools": "^5.7.0-alpha.0"
+    "@cspell/cspell-tools": "^5.7.0"
   }
 }
