--- a/packages/cspell/package.json
+++ b/packages/cspell/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cspell",
-  "version": "5.7.0-alpha.0",
+  "version": "5.7.0",
   "description": "A Spelling Checker for Code!",
   "funding": "https://github.com/streetsidesoftware/cspell?sponsor=1",
   "main": "dist/index.js",
@@ -68,12 +68,12 @@
   },
   "homepage": "https://github.com/streetsidesoftware/cspell#readme",
   "dependencies": {
-    "@cspell/cspell-types": "^5.6.7",
+    "@cspell/cspell-types": "^5.7.0",
     "chalk": "^4.1.2",
     "commander": "^8.1.0",
     "comment-json": "^4.1.1",
-    "cspell-glob": "^5.6.7",
-    "cspell-lib": "^5.7.0-alpha.0",
+    "cspell-glob": "^5.7.0",
+    "cspell-lib": "^5.7.0",
     "fs-extra": "^10.0.0",
     "get-stdin": "^8.0.0",
     "glob": "^7.1.7",
