test: Update snapshots

--- a/integration-tests/repositories/cspell.yaml
+++ b/integration-tests/repositories/cspell.yaml
@@ -8,6 +8,7 @@ ignorePaths:
   - "*.ktx"
   - "*.idmap" # DOOM, cspell:ignore idmap
   - "*.ogex" # DOOM, cspell:ignore ogex
+  - "**/prettier/"
 
 import:
   - "./cspell-latex.json"
