lint: fix lint issues

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,14 +1,15 @@
 .vscode/
 [sS]amples/
+[tT]emp/
+**/dist/
+**/package-lock.json
 CHANGELOG.md
+coverage
 cspell.json
 cspell.schema.json
-**/dist/
-[tT]emp/
 integration-tests/config/config.json
 integration-tests/repositories/*/*/**
 lerna.json
-tsconfig*.json
 packages/*/dist/
-**/package-lock.json
-coverage
+packages/cspell-bundled-dicts/cspell-default.config.js
+tsconfig*.json
