--- a/packages/cspell-types/package.json
+++ b/packages/cspell-types/package.json
@@ -20,7 +20,8 @@
     "clean-build": "npm run clean && npm run build",
     "compile": "tsc -p .",
     "test-schema": "ajv -s ./cspell.schema.json -d \"cspell.test.{json,yaml}\" -c ./ajv.config.js",
-    "test": "jest && npm run test-schema"
+    "test": "jest && npm run test-schema",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
