--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -8,15 +8,22 @@
   "main": "cspell-default.json",
   "files": [
     "cspell-default.json",
+    "cspell-default.config.js",
+    "cspell-compatibility.json",
     "compatibility-words.txt.gz"
   ],
   "exports": {
-    ".": "./cspell-default.json",
+    ".": "./cspell-default.config.js",
+    "./cspell-default.config.js": "./cspell-default.config.js",
     "./cspell-default.json": "./cspell-default.json"
   },
   "scripts": {
+    "build": "tsc -p .",
     "build-dict": "cspell-tools-cli compile compatibility-words.txt",
-    "test": "node ../../bin.js \"*.txt\""
+    "clean": "echo clean",
+    "clean-build": "npm run clean && npm run build",
+    "prepare": "npm run clean-build",
+    "test": "node ../../bin.js \"*.{txt,md,ts}\""
   },
   "repository": {
     "type": "git",
@@ -63,7 +70,7 @@
     "@cspell/dict-npm": "^1.0.15",
     "@cspell/dict-php": "^1.0.24",
     "@cspell/dict-powershell": "^1.0.18",
-    "@cspell/dict-public-licenses": "^1.0.2",
+    "@cspell/dict-public-licenses": "^1.0.3",
     "@cspell/dict-python": "^1.0.37",
     "@cspell/dict-ruby": "^1.0.14",
     "@cspell/dict-rust": "^1.0.23",
@@ -75,6 +82,7 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
-    "@cspell/cspell-tools": "^5.7.1"
+    "@cspell/cspell-tools": "^5.7.1",
+    "@cspell/cspell-types": "^5.7.0"
   }
 }
