fix: Detect when module default is used with `cspell.config.js` files.

--- a/packages/cspell-bundled-dicts/package.json
+++ b/packages/cspell-bundled-dicts/package.json
@@ -23,6 +23,7 @@
     "clean": "echo clean",
     "clean-build": "npm run clean && npm run build",
     "prepare": "npm run clean-build",
+    "watch": "npm run build -- --watch",
     "test": "node ../../bin.js \"*.{txt,md,ts}\""
   },
   "repository": {
